--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=devopstrainingblr@gmail.com
+email=narasimhamurthybb696@gmail.com
 #always-auth=true
-_auth=YWRtaW46cGFzc3cwcmQ=
+_auth=YWRtaW46YWRtaW4xMjM=
 allowRepublish=true
